# Veilum-shielded-Pool

./: .env.example  .gitignore  Cargo.toml  README.md  fly.indexer.toml  package-lock.json  package.json  render.yaml
apps/web/: .env.example  .env.local  index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/web/public/: deployment.json
apps/web/public/circuits/: shielded_transfer.json  shielded_transfer_asp.json
apps/web/public/config/: networks.json  services.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: ConnectWallet.tsx  DashboardLayout.tsx  LandingLayout.tsx  ProofLoader.tsx  WalletProvider.tsx
scripts/: asp-e2e.mjs  bootstrap-asp-circuits.sh  bootstrap-relayer-circuits.sh  build-circuits-asp.sh  build-circuits.sh  debug-merkle-rpcs.mjs  debug-merkle.mjs  deploy-stables.mjs  devnet-e2e.mjs  generate-contract-bindings.mjs  install-noir-toolchain.sh  test-note-scan.mjs
services/asp/: .env.example  package.json
services/asp/artifacts/: hash2.json  note_hash.json
services/asp/data/: asp-registry.json  bad-stellar-accounts.json
services/asp/src/: asp-chain.js  asp-pipeline.js  asp-tx-index.js  onchain-scan.js  server.js  soroban-read.js  soroban-submit.js
services/indexer/: .env.example  Dockerfile  fly.toml  package.json
services/indexer/src/: event-channel.js  merkle-extract.js  merkle-rebuild.js  pool-events-index.js  server.js  store.js
services/relayer/: .env.example  package.json
services/relayer/artifacts/: vk
services/relayer/src/: server.js  soroban-submit.js
(+130 files in other folders)
